# janus-gateway

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .goreleaser.yml  BUILD  GOMOD.md  Issues.md  README.md  WORKSPACE  go.mod  go.sum  make-go-mod.sh  repositories.bzl
.circleci/: README.md  config.yml
cmd/custom-gateway/: BUILD.bazel  main.go  registrydemo.go
cmd/gateway/: BUILD.bazel  main.go  registryprod.go
docs/: design.md  gateway-validation-rule.md  spring-validation.md
docs/images/: Ease-Gateway.drawio
docs/scripts/: start.sh  stop.sh
examples/: README.md  USAGE.md
examples/cmd/example-gateway-server/: BUILD.bazel  main.go
examples/cmd/example-grpc-server/: BUILD.bazel  main.go
examples/cmd/grpc-server/: BUILD.bazel  echo.go  main.go
examples/gateway/: BUILD.bazel  gateway.go  handlers.go  main.go
examples/grpc-server/: BUILD.bazel  echo.go  main.go
examples/internal/: README.md
examples/internal/cmd/example-gateway-server/: BUILD.bazel  main.go
examples/internal/cmd/example-grpc-client/: BUILD.bazel  gatewayclient.go  grpcclient.go  main.go
examples/internal/cmd/example-grpc-server/: BUILD.bazel  main.go
examples/internal/cmd/grpc-server/: BUILD.bazel
examples/internal/gateway/: BUILD.bazel  gateway.go  main.go
examples/internal/integration/: BUILD.bazel  README.md  integration_test.go  main_test.go
examples/internal/proto/examplepb/: BUILD.bazel  echo_service.pb.go  echo_service.pb.gw.go  echo_service.proto  echo_service.swagger.json  echo_service_grpc.pb.go  generated_input.proto  standalone_echo_service.yaml  unannotated_echo_service.pb.go  unannotated_echo_service.proto  unannotated_echo_service_grpc.pb.go
examples/internal/server/: BUILD.bazel  echo.go  main.go  unannotatedecho.go
examples/proto/: BUILD.bazel  echo_service.pb.go  echo_service.pb.gw.go  echo_service.proto  echo_service.swagger.json  echo_service_grpc.pb.go
examples/server/: BUILD.bazel  echo.go  main.go
gateway/: BUILD  HISTORY.md  README.md
gateway/codegenerator/: BUILD.bazel  parse_req_test.go
gateway/internal/: BUILD.bazel  errors.pb.go  errors.proto
gateway/internal/casing/: BUILD.bazel
gateway/internal/codegenerator/: BUILD.bazel  parse_req_test.go
gateway/internal/descriptor/: BUILD.bazel  grpc_api_configuration.go  openapi_configuration.go  openapi_configuration_test.go  registry.go  registry_test.go  services.go  types.go
gateway/internal/descriptor/apiconfig/: BUILD.bazel  apiconfig.pb.go  apiconfig.proto
gateway/internal/descriptor/openapiconfig/: BUILD.bazel  openapiconfig.pb.go  openapiconfig.proto
gateway/internal/generator/: BUILD.bazel  generator.go
gateway/options/: BUILD.bazel  annotations.proto  http.proto
gateway/protoc-gen-grpc-gateway/: BUILD.bazel  main.go  main_test.go
gateway/protoc-gen-grpc-gateway/descriptor/: BUILD.bazel  grpc_api_service.go  registry.go  services.go  services_test.go  types.go
gateway/protoc-gen-grpc-gateway/generator/: BUILD.bazel  generator.go
gateway/protoc-gen-grpc-gateway/gengateway/: BUILD.bazel  generator.go  generator_test.go  template.go  template_test.go
gateway/protoc-gen-grpc-gateway/httprule/: BUILD.bazel
gateway/protoc-gen-grpc-gateway/internal/gengateway/: BUILD.bazel  generator.go  generator_test.go  template.go  template_test.go
gateway/protoc-gen-openapiv2/: BUILD.bazel  defs.bzl  main.go
gateway/protoc-gen-openapiv2/internal/genopenapi/: BUILD.bazel  generator.go  template.go  template_test.go  types.go
gateway/protoc-gen-openapiv2/options/: BUILD.bazel  annotations.pb.go  annotations.proto  openapiv2.pb.go  openapiv2.proto
gateway/protoc-gen-swagger/: BUILD.bazel  defs.bzl  main.go
gateway/protoc-gen-swagger/genswagger/: BUILD.bazel  generator.go  template.go  template_test.go  types.go
gateway/protoc-gen-swagger/options/: BUILD.bazel  annotations.proto  openapiv2.proto
gateway/runtime/: BUILD.bazel  balancer.go  balancer_test.go  context_test.go  convert_test.go  errors.go  errors_test.go  handler.go  handler_test.go  hook.go  hook_test.go  marshal_httpbodyproto_test.go  marshaler_registry.go  marshaler_registry_test.go  mux.go  mux_test.go  proto_errors.go  query.go  query_test.go  service.go
gateway/runtime/internal/: BUILD.bazel
gateway/runtime/internal/examplepb/: BUILD.bazel  proto3.pb.go  proto3.proto
httpoptions/: BUILD.bazel  annotations.pb.go  annotations.proto  http.pb.go  http.proto  pom.xml
integrate/: BUILD.bazel  const.go  cors.go  doc.go  gzip.go  gzip_test.go  hook.go  hookexternal.go  middleware.go
integrate/metrics/: BUILD  reporter.go
internal/: BUILD.bazel  README.md  balancer.go  balancer_test.go  hook.go  hook_test.go  service.go
proto/: .project  pom.xml
proto/data/: BUILD.bazel  data.proto  pom.xml
proto/echo/: BUILD.bazel  echo_service.pb.go  echo_service.pb.gw.go  echo_service.proto
proto/examplepb/: BUILD.bazel  echo_service.proto  echo_service.swagger.json  pom.xml
proto/examples/: .classpath  .project  BUILD.bazel  echo_service.pb.go  echo_service.pb.gw.go  echo_service.proto  echo_service.swagger.json  echo_service_grpc.pb.go  pom.xml
proto/frontend/: .project  BUILD.bazel  en.loc  error.proto  loc_generator.pl  pom.xml
util/: BUILD.bazel  common.go  crypto.go  doc.go  log.go  time.go
util/glog/: BUILD.bazel  Readme.md  doc.go  glog.go  glog_file.go  glog_patch.go  mlog.go
util/glog/cmd/: BUILD.bazel  main.go
