load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "options_proto_files",
    srcs = [
        "annotations.proto",
        "http.proto",
    ],
)

go_library(
    name = "go_default_library",
    embed = [":options_go_proto"],
    importpath = "github.com/binchencoder/ease-gateway/httpoptions",
)

proto_library(
    name = "options_proto",
    srcs = [
        "annotations.proto",
        "http.proto",
    ],
    deps = [
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:descriptor_proto",
        "@com_github_binchencoder_gateway_proto//data:data_proto",
        "@com_github_binchencoder_gateway_proto//frontend:error_proto",
    ],
)

go_proto_library(
    name = "options_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/binchencoder/ease-gateway/httpoptions",
    proto = ":ease_api_proto",
    deps = [
        "@com_github_binchencoder_gateway_proto//data:go_default_library",
        "@com_github_binchencoder_gateway_proto//frontend:go_default_library",
    ],
)

proto_library(
    name = "ease_api_proto",
    srcs = [
        "annotations.proto",
        "http.proto",
    ],
    deps = [
        "@com_github_binchencoder_gateway_proto//data:data_proto",
        "@com_github_binchencoder_gateway_proto//frontend:error_proto",
        "@com_google_protobuf//:descriptor_proto",
    ],
)
