package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    importpath = "github.com/binchencoder/ease-gateway/integrate",
    deps = [
        "//ease-gateway/util:go_default_library",
        "//ease-gateway/util/glog:go_default_library",
        "//ease-gateway/integrate/metrics:go_default_library",
        "//ease-gateway/gateway/runtime:go_default_library",
        "//ease-gateway/gateway/options:go_default_library",
        "//ease-gateway/proto/data:go_default_library",
        "//ease-gateway/proto/frontend:go_default_library",
        "//letsgo/trace:go_default_library",
        "//letsgo/grpc:go_default_library",
        "//third-party-go/vendor/github.com/golang/protobuf/proto:go_default_library",
        "//third-party-go/vendor/github.com/klauspost/compress/gzip:go_default_library",
        "//third-party-go/vendor/golang.org/x/net/context:go_default_library",
        "//third-party-go/vendor/google.golang.org/grpc:go_default_library",
        "//third-party-go/vendor/google.golang.org/grpc/codes:go_default_library",
        "//third-party-go/vendor/google.golang.org/grpc/metadata:go_default_library",
    ]
)
