package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    importpath = "github.com/binchencoder/ease-gateway/integrate",
    deps = [
        "//util:go_default_library",
        "//util/glog:go_default_library",
        "//integrate/metrics:go_default_library",
        "//gateway/runtime:go_default_library",
        "//gateway/options:go_default_library",
        "//proto/data:go_default_library",
        "//proto/frontend:go_default_library",
        "@binchencoder_letsgo//trace:go_default_library",
        "@binchencoder_letsgo//grpc:go_default_library",
        "@binchencoder_third_party_go//vendor/github.com/golang/protobuf/proto:go_default_library",
        "@binchencoder_third_party_go//vendor/github.com/klauspost/compress/gzip:go_default_library",
        "@binchencoder_third_party_go//vendor/golang.org/x/net/context:go_default_library",
        "@binchencoder_third_party_go//vendor/google.golang.org/grpc:go_default_library",
        "@binchencoder_third_party_go//vendor/google.golang.org/grpc/codes:go_default_library",
        "@binchencoder_third_party_go//vendor/google.golang.org/grpc/metadata:go_default_library",
    ]
)
