package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    importpath = "github.com/binchencoder/ease-gateway/integrate",
    deps = [
        "//httpoptions:go_default_library",
        "//gateway/runtime:go_default_library",
        "//integrate/metrics:go_default_library",
        "//util:go_default_library",
        "@com_github_binchencoder_gateway_proto//data:go_default_library",
        "@com_github_binchencoder_gateway_proto//frontend:go_default_library",
        "@com_github_binchencoder_letsgo//grpc:go_default_library",
        "@com_github_binchencoder_letsgo//trace:go_default_library",
        "@com_github_klauspost_compress//gzip:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["gzip_test.go"],
    embed = [":go_default_library"],
)
