package(
    default_visibility = ["//visibility:public"],
)

load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    importpath = "binchencoder.com/ease-gateway/util",
    deps = [
        "//util/glog:go_default_library",
        "@com_github_fatih_color//:go_default_library",
    ],
)
