package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "ease-gateway-demo",
    srcs = [
        "main.go",
        "registrydemo.go",
    ],
    deps = [
        "//examples/proto:go_default_library",
        "//gateway/runtime:go_default_library",
        "//integrate:go_default_library",
        "//proto/data:go_default_library",
        "//util:go_default_library",
        "@binchencoder_letsgo//:go_default_library",
        "@binchencoder_third_party_go//vendor/github.com/golang/glog:go_default_library",
    ],
)
