package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "custom-ease-gateway",
    embed = [":go_default_library"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "registrydemo.go",
    ],
    importpath = "github.com/binchencoder/ease-gateway/cmd/custom-gateway",
    deps = [
        "//examples/internal/proto/examplepb",
        "//gateway/runtime",
        "//integrate:go_default_library",
        "@com_github_binchencoder_gateway_proto//data:go_default_library",
        "@com_github_binchencoder_letsgo//:go_default_library",
        "@com_github_golang_glog//:go_default_library",
    ],
)
