load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

go_library(
    name = "ease-gateway",
    srcs = [
        "main.go",
    ],
    importpath = "github.com/binchencoder/ease-gateway/cmd/gateway",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/frontend:go_default_library",
        "@grpc_ecosystem_grpc_gateway//runtime:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//connectivity:go_default_library",
    ],
)

pkg_tar(
    name = "ease-gateway-tar",
    srcs = [
        ":ease-gateway",
    ],
    package_dir = "/ease-gateway/bin",
)
