load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

go_library(
    name = "ease-gateway",
    srcs = [
        "main.go",
        "registryprod.go",
    ],
    importpath = "binchencoder.com/ease-gateway/cmd/gateway",
    visibility = ["//visibility:public"],
    deps = [
        "//gateway/runtime:go_default_library",
        "//integrate:go_default_library",
        "//proto/examples:go_default_library",
        "//util:go_default_library",
        "@com_github_binchencoder_gateway_proto//data:go_default_library",
        "@com_github_binchencoder_letsgo//:go_default_library",
        "@com_github_binchencoder_letsgo//service/naming:go_default_library",
        "@com_github_golang_glog//:go_default_library",
    ],
)

# pkg_tar(
#     name = "ease-gateway-tar",
#     srcs = [
#         ":ease-gateway",
#     ],
#     package_dir = "/ease-gateway/bin",
# )

go_binary(
    name = "gateway",
    embed = [":ease-gateway"],
    visibility = ["//visibility:public"],
)
