load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

go_library(
    name = "janus-gateway",
    srcs = [
        "main.go",
        "registryprod.go",
    ],
    importpath = "github.com/binchencoder/janus-gateway/cmd/gateway",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/examplepb",
        "//gateway/runtime",
        "//integrate:go_default_library",
        "//util:go_default_library",
        "@com_github_binchencoder_gateway_proto//data:go_default_library",
        "@com_github_binchencoder_letsgo//:go_default_library",
        "@com_github_binchencoder_letsgo//service/naming:go_default_library",
        "@com_github_golang_glog//:glog",
    ],
)

# pkg_tar(
#     name = "janus-gateway-tar",
#     srcs = [
#         ":janus-gateway",
#     ],
#     package_dir = "/janus-gateway/bin",
# )

go_binary(
    name = "gateway",
    embed = [":janus-gateway"],
    visibility = ["//visibility:public"],
)
