load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "gateway.go",
        "handlers.go",
        "main.go",
    ],
    importpath = "github.com/binchencoder/ease-gateway/examples/gateway",
    visibility = ["//visibility:public"],
    deps = [
        "//examples/proto:go_default_library",
        "//gateway/runtime:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@binchencoder_third_party_go//vendor/google.golang.org/grpc:go_default_library",
        "@binchencoder_third_party_go//vendor/google.golang.org/grpc/connectivity:go_default_library",
    ],
)
