load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("//gateway/protoc-gen-swagger:defs.bzl", "protoc_gen_swagger")

package(default_visibility = ["//visibility:public"])

# gazelle:exclude echo_service.pb.gw.go

proto_library(
    name = "examplepb_proto",
    srcs = glob(["*.proto"]),
    deps = [
        "//gateway/options:options_proto",
        "//proto/data:data_proto",
        "//proto/frontend:error_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:field_mask_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@com_google_protobuf//:wrappers_proto",
        "@go_googleapis//google/api:annotations_proto",
    ],
)

go_proto_library(
    name = "examplepb_go_proto",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc",
        "//gateway/protoc-gen-grpc-gateway:go_gen_grpc_gateway",  # keep
    ],
    importpath = "github.com/binchencoder/ease-gateway/examples/proto",
    proto = ":examplepb_proto",
    deps = [
        "//gateway/protoc-gen-swagger/options:go_default_library",
        "//gateway/options:options_go_proto",
        "//gateway/runtime:go_default_library",
        "//proto/data:data_go_proto",
        "//proto/frontend:error_go_proto",
        "@binchencoder_letsgo//grpc:go_default_library",
        "@binchencoder_skylb_api//balancer:go_default_library",
        "@binchencoder_skylb_api//client:go_default_library",
        "@binchencoder_skylb_api//client/option:go_default_library",
        "@binchencoder_skylb_api//proto:go_default_library",
        "@binchencoder_third_party_go//vendor/google.golang.org/grpc/naming:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    embed = [":examplepb_go_proto"],
    importpath = "github.com/binchencoder/ease-gateway/examples/proto",
    deps = [
        "//gateway/options:go_default_library",
        "//gateway/runtime:go_default_library",
        "//proto/data:go_default_library",
        "//proto/frontend:go_default_library",
        "@binchencoder_letsgo//grpc:go_default_library",
        "@binchencoder_skylb_api//balancer:go_default_library",
        "@binchencoder_skylb_api//client:go_default_library",
        "@binchencoder_skylb_api//client/option:go_default_library",
        "@binchencoder_skylb_api//proto:go_default_library",
        "@binchencoder_third_party_go//vendor/google.golang.org/grpc/naming:go_default_library",
        "@binchencoder_third_party_go//vendor/github.com/golang/glog:go_default_library",
        "@binchencoder_third_party_go//vendor/github.com/golang/protobuf/proto:go_default_library",
        "@binchencoder_third_party_go//vendor/github.com/golang/protobuf/protoc-gen-go/generator:go_default_library",
        "@grpc_ecosystem_grpc_gateway//utilities:go_default_library",
    ],
)

protoc_gen_swagger(
    name = "expamplepb_protoc_gen_swagger",
    proto = ":examplepb_proto",
    single_output = False,  # Outputs a single swagger.json file.
)
