load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("//gateway/protoc-gen-swagger:defs.bzl", "protoc_gen_swagger")

package(default_visibility = ["//visibility:public"])

# gazelle:exclude echo_service.pb.gw.go

proto_library(
    name = "examplepb_proto",
    srcs = glob(["*.proto"]),
    deps = [
        "//httpoptions:options_proto",
        "@com_github_binchencoder_gateway_proto//data:data_proto",
        "@com_github_binchencoder_gateway_proto//frontend:error_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:field_mask_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@com_google_protobuf//:wrappers_proto",
        "@go_googleapis//google/api:annotations_proto",
    ],
)

go_proto_library(
    name = "examplepb_go_proto",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc",
        "//gateway/protoc-gen-grpc-gateway:go_gen_grpc_gateway",  # keep
    ],
    importpath = "binchencoder.com/ease-gateway/examples/proto",
    proto = ":examplepb_proto",
    deps = [
        "//httpoptions:go_default_library",
        "//gateway/runtime:go_default_library",
        "@com_github_binchencoder_letsgo//grpc:go_default_library",
        "@com_github_binchencoder_skylb_api//balancer:go_default_library",
        "@com_github_binchencoder_skylb_api//client:go_default_library",
        "@com_github_binchencoder_skylb_api//client/option:go_default_library",
        "@com_github_binchencoder_skylb_api//proto:go_default_library",
        "@org_golang_google_grpc//naming:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    embed = [":examplepb_go_proto"],
    importpath = "binchencoder.com/ease-gateway/examples/proto",
    deps = [
        "//httpoptions:go_default_library",
        "//gateway/runtime:go_default_library",
        "@com_github_binchencoder_gateway_proto//data:go_default_library",
        "@com_github_binchencoder_gateway_proto//frontend:go_default_library",
        "@com_github_binchencoder_skylb_api//balancer:go_default_library",
        "@com_github_binchencoder_skylb_api//client:go_default_library",
    ],
)

protoc_gen_swagger(
    name = "expamplepb_protoc_gen_swagger",
    proto = ":examplepb_proto",
    single_output = False,  # Outputs a single swagger.json file.
)