load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "go_default_library",
    srcs = [
        "echo.go",
        "main.go",
    ],
    importpath = "github.com/binchencoder/ease-gateway/examples/server",
    deps = [
        "//examples/proto:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@binchencoder_third_party_go//vendor/github.com/golang/protobuf/proto:go_default_library",
        "@com_github_rogpeppe_fastuuid//:go_default_library",
        "@go_googleapis//google/rpc:errdetails_go_proto",
        "@io_bazel_rules_go//proto/wkt:duration_go_proto",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
        "@io_bazel_rules_go//proto/wkt:field_mask_go_proto",
        "@binchencoder_third_party_go//vendor/google.golang.org/grpc:go_default_library",
        "@binchencoder_third_party_go//vendor/google.golang.org/grpc/codes:go_default_library",
        "@binchencoder_third_party_go//vendor/google.golang.org/grpc/metadata:go_default_library",
        "@binchencoder_third_party_go//vendor/google.golang.org/grpc/status:go_default_library",
    ],
)
