load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility =  ["//visibility:public"])

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "parse_req.go",
    ],
    importpath = "github.com/binchencoder/ease-gateway/gateway/codegenerator",
    deps = [
        "@binchencoder_third_party_go//vendor/github.com/golang/protobuf/proto:go_default_library",
        "@io_bazel_rules_go//proto/wkt:compiler_plugin_go_proto",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["parse_req_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@binchencoder_third_party_go//vendor/github.com/golang/protobuf/proto:go_default_library",
        "@io_bazel_rules_go//proto/wkt:compiler_plugin_go_proto",
    ],
)
