load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "internal_proto",
    srcs = ["errors.proto"],
    deps = [
        "@com_github_binchencoder_gateway_proto//frontend:error_proto",
        "@com_google_protobuf//:any_proto",
    ],
)

go_proto_library(
    name = "internal_go_proto",
    importpath = "github.com/binchencoder/janus-gateway/gateway/internal",
    proto = ":internal_proto",
    deps = [
        "@com_github_binchencoder_gateway_proto//frontend:error_go_proto",
    ]
)

go_library(
    name = "go_default_library",
    embed = [":internal_go_proto"],
    importpath = "github.com/binchencoder/janus-gateway/gateway/internal",
    deps = [
        "@com_github_binchencoder_gateway_proto//frontend:go_default_library",
    ]
)
