load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

package(default_visibility = ["//visibility:private"])

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/binchencoder/ease-gateway/gateway/protoc-gen-openapiv2",
    deps = [
        "@com_github_grpc_ecosystem_grpc_gateway//internal/codegenerator:go_default_library",
        "//gateway/internal/descriptor:go_default_library",
        "//gateway/protoc-gen-openapiv2/internal/genopenapi:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_google_protobuf//types/pluginpb:go_default_library",
    ],
)

go_binary(
    name = "protoc-gen-openapiv2",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
)
