load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

package(default_visibility = ["//visibility:private"])

go_library(
    name = "protoc-gen-openapiv2_lib",
    srcs = ["main.go"],
    importpath = "github.com/binchencoder/ease-gateway/gateway/protoc-gen-openapiv2",
    deps = [
        "@com_github_grpc_ecosystem_grpc_gateway//internal/codegenerator",
        "//gateway/internal/descriptor",
        "//gateway/protoc-gen-openapiv2/internal/genopenapi",
	    "@com_github_grpc_ecosystem_grpc_gateway//utilities",
        "@com_github_golang_glog//:glog",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/pluginpb",
    ],
)

go_binary(
    name = "protoc-gen-openapiv2",
    embed = [":protoc-gen-openapiv2_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "protoc-gen-openapiv2_test",
    size = "small",
    srcs = ["main_test.go"],
    embed = [":protoc-gen-openapiv2_lib"],
)
