load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "go_default_library",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    importpath = "github.com/binchencoder/ease-gateway/gateway/runtime",
    deps = [
        "@grpc_ecosystem_grpc_gateway//internal:go_default_library",
        "@grpc_ecosystem_grpc_gateway//utilities:go_default_library",
        "//gateway/options:go_default_library",
        "//proto/data:go_default_library",
        "@binchencoder_letsgo//grpc:go_default_library",
        "@binchencoder_letsgo//hashring:go_default_library",
        "@binchencoder_skylb_api//proto:go_default_library",
        "@binchencoder_third_party_go//vendor/github.com/pborman/uuid:go_default_library",
        "@binchencoder_third_party_go//vendor/golang.org/x/net/context:go_default_library",
        "@binchencoder_third_party_go//vendor/google.golang.org/grpc:go_default_library",
        "@binchencoder_third_party_go//vendor/google.golang.org/grpc/status:go_default_library",
        "@binchencoder_third_party_go//vendor/google.golang.org/grpc/metadata:go_default_library",
        "@binchencoder_third_party_go//vendor/google.golang.org/grpc/codes:go_default_library",
        "@binchencoder_third_party_go//vendor/google.golang.org/grpc/grpclog:go_default_library",
        "@binchencoder_third_party_go//vendor/github.com/golang/protobuf/jsonpb:go_default_library_gen",
        "@binchencoder_third_party_go//vendor/github.com/golang/protobuf/proto:go_default_library",
        "@binchencoder_third_party_go//vendor/github.com/golang/protobuf/protoc-gen-go/generator:go_default_library_gen",
        "@go_googleapis//google/api:httpbody_go_proto",
        "@io_bazel_rules_go//proto/wkt:any_go_proto",
        "@io_bazel_rules_go//proto/wkt:duration_go_proto",
        "@io_bazel_rules_go//proto/wkt:field_mask_go_proto",
        "@io_bazel_rules_go//proto/wkt:timestamp_go_proto",
        "@io_bazel_rules_go//proto/wkt:wrappers_go_proto",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "context_test.go",
        "errors_test.go",
        "fieldmask_test.go",
        "handler_test.go",
        "marshal_httpbodyproto_test.go",
        "marshaler_registry_test.go",
        "mux_test.go",
        "pattern_test.go",
        "query_test.go",
    ],
    embed = [
        ":go_default_library",
    ],
    deps = [
        "//examples/proto:go_default_library",
        "@binchencoder_third_party_go//vendor/google.golang.org/grpc:go_default_library",
        "@binchencoder_third_party_go//vendor/google.golang.org/grpc/codes:go_default_library",
        "@binchencoder_third_party_go//vendor/google.golang.org/grpc/metadata:go_default_library",
        "@binchencoder_third_party_go//vendor/google.golang.org/grpc/status:go_default_library",
        "@grpc_ecosystem_grpc_gateway//internal:go_default_library",
        "@grpc_ecosystem_grpc_gateway//utilities:go_default_library",
        "@binchencoder_third_party_go//vendor/github.com/golang/protobuf/jsonpb:go_default_library_gen",
        "@binchencoder_third_party_go//vendor/github.com/golang/protobuf/proto:go_default_library",
        "@binchencoder_third_party_go//vendor/github.com/golang/protobuf/ptypes:go_default_library_gen",
        "@go_googleapis//google/api:httpbody_go_proto",
        "@go_googleapis//google/rpc:errdetails_go_proto",
        "@io_bazel_rules_go//proto/wkt:duration_go_proto",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
        "@io_bazel_rules_go//proto/wkt:field_mask_go_proto",
        "@io_bazel_rules_go//proto/wkt:struct_go_proto",
        "@io_bazel_rules_go//proto/wkt:timestamp_go_proto",
        "@io_bazel_rules_go//proto/wkt:wrappers_go_proto",
    ],
)
