load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "go_default_library",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    importpath = "github.com/binchencoder/ease-gateway/gateway/runtime",
    deps = [
        "//gateway/internal:go_default_library",
        "//httpoptions:go_default_library",
        "@com_github_binchencoder_gateway_proto//data:go_default_library",
        "@com_github_binchencoder_gateway_proto//frontend:go_default_library",
        "@com_github_binchencoder_letsgo//grpc:go_default_library",
        "@com_github_binchencoder_letsgo//hashring:go_default_library",
        "@com_github_binchencoder_skylb_api//proto:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_github_grpc_ecosystem_grpc_gateway//utilities:go_default_library",
	    "@com_github_grpc_ecosystem_grpc_gateway//internal/httprule:go_default_library",
	    "@com_github_pborman_uuid//:go_default_library",
        "@com_github_golang_protobuf//jsonpb:go_default_library_gen",
        "@go_googleapis//google/api:httpbody_go_proto",
        "@io_bazel_rules_go//proto/wkt:duration_go_proto",
        "@io_bazel_rules_go//proto/wkt:field_mask_go_proto",
        "@io_bazel_rules_go//proto/wkt:timestamp_go_proto",
        "@io_bazel_rules_go//proto/wkt:wrappers_go_proto",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//grpclog:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_google_protobuf//encoding/protojson:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_google_protobuf//reflect/protoreflect:go_default_library",
        "@org_golang_google_protobuf//reflect/protoregistry:go_default_library",
	    "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "balancer_test.go",
        "context_test.go",
        "errors_test.go",
        "handler_test.go",
        "hook_test.go",
        "marshal_httpbodyproto_test.go",
        "marshaler_registry_test.go",
        "mux_test.go",
        "pattern_test.go",
        "query_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//examples/proto:go_default_library",
        "//gateway/internal:go_default_library",
	    "//gateway/runtime/internal/examplepb:go_default_library",
        "//httpoptions:go_default_library",
        "@com_github_binchencoder_letsgo//hashring:go_default_library",
        "@com_github_binchencoder_skylb_api//proto:go_default_library",
        "@com_github_grpc_ecosystem_grpc_gateway//utilities:go_default_library",
	    "@com_github_grpc_ecosystem_grpc_gateway//runtime/internal/examplepb:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_google_go_cmp//cmp/cmpopts:go_default_library",
        "@go_googleapis//google/api:httpbody_go_proto",
        "@go_googleapis//google/rpc:errdetails_go_proto",
        "@go_googleapis//google/rpc:status_go_proto",
        "@io_bazel_rules_go//proto/wkt:duration_go_proto",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
        "@io_bazel_rules_go//proto/wkt:field_mask_go_proto",
        "@io_bazel_rules_go//proto/wkt:struct_go_proto",
        "@io_bazel_rules_go//proto/wkt:timestamp_go_proto",
        "@io_bazel_rules_go//proto/wkt:wrappers_go_proto",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_google_protobuf//encoding/protojson:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_google_protobuf//testing/protocmp:go_default_library",
	    "@org_golang_google_grpc//:go_default_library",
	    "@org_golang_x_net//context:go_default_library",
    ],
)
